@@ -510,7 +510,7 @@ public class Elements extends ArrayList<Element> {
     }
 
     /**
-     * Get all of the following element siblings of each element in this list.
+     * Get each of the following element siblings of each element in this list.
      * @return all following element siblings.
      */
     public Elements nextAll() {
@@ -518,7 +518,7 @@ public class Elements extends ArrayList<Element> {
     }
 
     /**
-     * Get all of the following element siblings of each element in this list, filtered by the query.
+     * Get each of the following element siblings of each element in this list, that match the query.
      * @param query CSS query to match siblings against
      * @return all following element siblings.
      */
@@ -544,7 +544,7 @@ public class Elements extends ArrayList<Element> {
     }
 
     /**
-     * Get all of the previous element siblings of each element in this list.
+     * Get each of the previous element siblings of each element in this list.
      * @return all previous element siblings.
      */
     public Elements prevAll() {
@@ -552,7 +552,7 @@ public class Elements extends ArrayList<Element> {
     }
 
     /**
-     * Get all of the previous element siblings of each element in this list, filtered by the query.
+     * Get each of the previous element siblings of each element in this list, that match the query.
      * @param query CSS query to match siblings against
      * @return all previous element siblings.
      */
